{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 42,
  "lineage": "a1b2c3d4-e5f6-7890-abcd-ef1234567890",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/virtualNetworks/vnet-prod-eastus",
            "name": "vnet-prod-eastus",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "address_space": ["10.0.0.0/16"],
            "tags": {
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/virtualNetworks/vnet-prod-eastus/subnets/snet-aks",
            "name": "snet-aks",
            "resource_group_name": "rg-prod-eastus",
            "virtual_network_name": "vnet-prod-eastus",
            "address_prefixes": ["10.0.1.0/24"],
            "service_endpoints": ["Microsoft.ContainerRegistry"]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/virtualNetworks/vnet-prod-eastus/subnets/snet-appgw",
            "name": "snet-appgw",
            "resource_group_name": "rg-prod-eastus",
            "virtual_network_name": "vnet-prod-eastus",
            "address_prefixes": ["10.0.2.0/24"]
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/virtualNetworks/vnet-prod-eastus/subnets/snet-db",
            "name": "snet-db",
            "resource_group_name": "rg-prod-eastus",
            "virtual_network_name": "vnet-prod-eastus",
            "address_prefixes": ["10.0.3.0/24"],
            "service_endpoints": ["Microsoft.Sql"]
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_list",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-aks",
            "name": "nsg-aks",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "security_rule": [
              {
                "name": "allow-https",
                "priority": 100,
                "direction": "Inbound",
                "access": "Allow",
                "protocol": "Tcp",
                "source_port_range": "*",
                "destination_port_range": "443",
                "source_address_prefix": "*",
                "destination_address_prefix": "*"
              }
            ]
          }
        },
        {
          "index_key": "db",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-db",
            "name": "nsg-db",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "security_rule": [
              {
                "name": "allow-sql",
                "priority": 100,
                "direction": "Inbound",
                "access": "Allow",
                "protocol": "Tcp",
                "source_port_range": "*",
                "destination_port_range": "1433",
                "source_address_prefix": "10.0.1.0/24",
                "destination_address_prefix": "*"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_list",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/publicIPAddresses/pip-appgw-prod",
            "name": "pip-appgw-prod",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "allocation_method": "Static",
            "sku": "Standard",
            "ip_address": "20.10.20.30",
            "tags": { "environment": "production" }
          }
        },
        {
          "index_key": "nat",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/publicIPAddresses/pip-nat-prod",
            "name": "pip-nat-prod",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "allocation_method": "Static",
            "sku": "Standard",
            "ip_address": "20.10.20.31",
            "tags": { "environment": "production" }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00000000-1111-2222-3333-444444444444/resourceGroups/rg-prod-eastus/providers/Microsoft.Network/applicationGateways/agw-prod-eastus",
            "name": "agw-prod-eastus",
            "location": "eastus",
            "resource_group_name": "rg-prod-eastus",
            "sku": {
              "name": "WAF_v2",
              "tier": "WAF_v2",
              "capacity": 2
            },
            "waf_configuration": {
              "enabled": true,
              "firewall_mode": "Prevention",
              "rule_set_version": "3.2"
            },
            "tags": { "environment": "production" }
          }
        }
      ]
    }
  ]
}